--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "dashboard",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "private": true,
   "dependencies": {
+    "codemirror": "^5.42.0",
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.0-beta.3",
+    "react-codemirror-runmode": "^1.0.4",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
