--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dashboard",
-  "version": "0.2.1",
+  "version": "0.2.2",
+  "author": "israellaaguan",
   "private": true,
   "dependencies": {
     "codemirror": "^5.42.0",
