--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "private": true,
   "dependencies": {
     "codemirror": "^5.42.0",
-    "react": "^16.6.3",
+    "next": "^8.0.1",
+    "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.3",
     "react-codemirror-runmode": "^1.0.4",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.8.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^2.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": "react-app"
